add sounds and notifications

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         </div>
       </div>
     </main>
+
+    <audio src="./assets/sounds/notification.wav" id="sound"></audio>
     <script type="module" src="./assets/Js/index.js"></script>
   </body>
 </html>
